# Memoria

./: .env.example  .gitignore  LICENSE  MULTI_CHARACTER_IMPLEMENTATION.md  Memoria_Code_Review_Report.md  PROJECT_STRUCTURE_OPTIMIZATION.md  README.md  chat-design.md  chat.sh  codex-prompt-角色卡编辑器.md  memoria.db  optimize_structure.sh  pyproject.toml  requirements.txt  私聊_万吉吉.xlsx
app/: main.py
app/api/: character_admin.py  dialogue.py  event_admin.py  multi_dialogue.py  relationship.py
app/characters/: npc_blacksmith_garran.json  npc_luo_xiaohei.json  (+3 more)
config/: .env.example  settings.yaml
data/: group_response_samples.jsonl
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  KNOWLEDGE_BASE_RAG_DESIGN.md  KNOWLEDGE_RETRIEVAL_EVALUATION.md  ROADMAP.md  graytide-implementation-report.md  graytide-playthrough.md
scripts/: chat.sh  cli_chat.py  compare_knowledge_embeddings.py  evaluate_knowledge_retrieval.py  run_tests.sh  seed_graytide_demo.py  seed_story_module.py
tests/: conftest.py  test_api_integrity.py  test_api_models.py  test_background_jobs.py  test_cli_debug.py  test_core.py  test_csrf.py  test_developer_experience.py  test_dialogue_api.py  test_domain_events.py  test_echo_archive.py  test_event_e2e.py  test_events.py  test_fact_claims.py  test_graytide_demo.py  test_group_dialogue_pulse.py  test_group_dialogue_runtime.py  test_knowledge_api.py  test_knowledge_base.py  test_llm_streaming.py  test_memory_extractor.py  test_multi_dialogue_api.py  test_orchestrator.py  test_output_safety.py  test_postgres_compat.py  test_repository.py  test_security_fixes.py  test_speech.py  test_story_module.py  test_story_state.py  test_streaming_api.py  test_system.py  test_user_character_card.py  test_vector_memory.py  test_world_clock.py  test_world_clock_api.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.speech-check.config.mjs
(+284 files in other folders)
