[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memoria"
version = "0.5.0"
description = "基于大语言模型的沉浸式角色扮演对话系统"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "httpx==0.25.2",
    "requests==2.34.2",
    "Pillow==12.2.0",
    "openai==1.54.3",
    "psycopg[binary]==3.2.3",
    "chromadb==0.4.22",
    "sentence-transformers==2.3.1",
    "numpy<2.0,>=1.22.5",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning",
]
